--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+oci
+oracledb
+certifi
+
 asgiref==3.7.2
 Django~=5.0.4
 sqlparse==0.5.0
 Pillow==10.3.0
-oci
-oracledb
-gdal
-certifi
+python-decouple==3.8
+social-auth-app-django==5.4.0
+django-extensions==3.2.3
+werkzeug==3.0.2
+pyOpenSSL==24.1.0
